# build-winccoa-manager

./: .gitignore  README.md
.devcontainer/: Dockerfile
.docs/: AZURE.md  BUILD.md
.github/workflows/: build.yml
cmake/: packaging.cmake
config/conan/: win_3.20.txt
demoDrv/: CMakeLists.txt  VersInfo.rc  build-config.yml  demoAlertService.cxx  demoAlertService.hxx  demoConnection.cxx  demoConnection.hxx  demoDrv.cxx  demoDrv.hxx  demoHWMapper.cxx  demoHWMapper.hxx  demoHWService.cxx  demoHWService.hxx  demoMain.cxx  demoResources.cxx  demoResources.hxx  demoTrans.cxx  demoTrans.hxx  demoTransformationType.hxx
demoDrv/tests/: CMakeLists.txt  demoTrans.cxx
pipeline/: build-template.yml
pipeline/createMatrix/: mergekeys.yml
